@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - updated the tooling for generating Makefile.PL
 
 0.14      2015-01-31 23:59:03Z
   - line numbers in shipped code are now the same as the repository source,
